RESOLVED FIXED184813
[GLIB] All API tests fail in debug builds
https://bugs.webkit.org/show_bug.cgi?id=184813
Summary [GLIB] All API tests fail in debug builds
Carlos Garcia Campos
Reported 2018-04-20 05:30:35 PDT
TEST: ./Tools/glib/../../WebKitBuild/Debug/bin/TestWebKitAPI/JavaScriptCore/TestJSC... /jsc/basic: FAIL FATAL-CRITICAL: void jsc_context_pop_exception_handler(JSCContext*): assertion 'JSC_IS_CONTEXT(context)' failed This is because of a conflict of ExceptionHandler class used in tests and ExceptionHandler struct defined in JSCContext.cpp. #0 _g_log_abort () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:554 #1 0x00007f9f116711d5 in g_logv () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:1362 #2 0x00007f9f11671322 in g_log () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:1403 #3 0x00007f9f0f306bbd in jsc_context_pop_exception_handler (context=0x0) at /home/igalia/cgarcia/WebKit/Source/JavaScriptCore/API/glib/JSCContext.cpp:651 #4 0x0000562b32eba3a5 in ExceptionHandler::pop (this=0x7fff9482a000) at /home/igalia/cgarcia/WebKit/Tools/TestWebKitAPI/Tests/JavaScriptCore/glib/TestJSC.cpp:85 #5 0x0000562b32eba350 in ExceptionHandler::~ExceptionHandler (this=0x7fff9482a000, __in_chrg=<optimized out>) at /home/igalia/cgarcia/WebKit/Tools/TestWebKitAPI/Tests/JavaScriptCore/glib/TestJSC.cpp:75 #6 0x00007f9f0f304935 in jscContextConstructed (object=0x562b33d1d830) at /home/igalia/cgarcia/WebKit/Source/JavaScriptCore/API/glib/JSCContext.cpp:153 #7 0x00007f9f0aef3f37 in g_object_new_internal () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/gobject/gobject.c:1837 #8 0x00007f9f0aef4fd5 in g_object_new_with_properties () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/gobject/gobject.c:1965 #9 0x00007f9f0aef59a1 in g_object_new () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/gobject/gobject.c:1637 #10 0x00007f9f0f306541 in jsc_context_new () at /home/igalia/cgarcia/WebKit/Source/JavaScriptCore/API/glib/JSCContext.cpp:518 #11 0x0000562b32e9ba50 in testJSCBasic () at /home/igalia/cgarcia/WebKit/Tools/TestWebKitAPI/Tests/JavaScriptCore/glib/TestJSC.cpp:114 #12 0x00007f9f116908e2 in test_case_run () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gtestutils.c:2157 #13 g_test_run_suite_internal () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gtestutils.c:2241 #14 0x00007f9f116907af in g_test_run_suite_internal () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gtestutils.c:2253 #15 0x00007f9f11690a6e in g_test_run_suite () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gtestutils.c:2329 #16 0x00007f9f11690a91 in g_test_run () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gtestutils.c:1594 #17 0x0000562b32eb8a10 in main (argc=1, argv=0x7fff9482a768) at /home/igalia/cgarcia/WebKit/Tools/TestWebKitAPI/Tests/JavaScriptCore/glib/TestJSC.cpp:2603
Attachments
Patch (3.46 KB, patch)
2018-04-20 05:34 PDT, Carlos Garcia Campos
mark.lam: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews206 for win-future (12.57 MB, application/zip)
2018-04-20 15:58 PDT, EWS Watchlist
no flags
Carlos Garcia Campos
Comment 1 2018-04-20 05:34:09 PDT
Mark Lam
Comment 2 2018-04-20 07:12:31 PDT
Comment on attachment 338411 [details] Patch r=me
EWS Watchlist
Comment 3 2018-04-20 15:58:42 PDT
Comment on attachment 338411 [details] Patch Attachment 338411 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7387972 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 4 2018-04-20 15:58:53 PDT
Created attachment 338476 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Carlos Garcia Campos
Comment 5 2018-04-20 23:38:33 PDT
Radar WebKit Bug Importer
Comment 6 2018-04-20 23:40:07 PDT
Note You need to log in before you can comment on or make changes to this bug.